@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.esprit</groupId>
-    <artifactId>java</artifactId>
+    <groupId>tn</groupId>
+    <artifactId>learniverse</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>this the one</name>
+    <name>Pidev-java</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -94,6 +94,11 @@
             <artifactId>ikonli-materialdesign2-pack</artifactId>
             <version>12.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-material-pack</artifactId>
+            <version>12.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -116,13 +121,19 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.esprit.java/com.esprit.java.HelloApplication</mainClass>
+                            <mainClass>tn.learniverse/tn.learniverse.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <vmArgs>
+                                --add-exports javafx.controls/com.sun.javafx.scene.control=tn.learniverse
+                                --add-exports javafx.web/com.sun.javafx.webkit=tn.learniverse
+                                --add-exports javafx.controls/com.sun.javafx.charts=tn.learniverse
+                                --add-exports javafx.graphics/com.sun.javafx.sg.prism=tn.learniverse
+                            </vmArgs>
                         </configuration>
                     </execution>
                 </executions>
